--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -74,6 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/show_pwd"
+                android:buttonTint="@color/white"
                 android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
