--- a/app/src/main/res/layout/signup_layout.xml
+++ b/app/src/main/res/layout/signup_layout.xml
@@ -148,6 +148,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="7dp"
+        android:buttonTint="@android:color/white"
         android:text="@string/terms_conditions"
         android:textColor="@color/white"
         android:textSize="14sp" />
