--- a/app/src/main/res/layout/forgotpassword_layout.xml
+++ b/app/src/main/res/layout/forgotpassword_layout.xml
@@ -2,9 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="20dp" >
+    android:padding="20dp"
+    android:weightSum="1">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_launcher"
+        android:layout_weight="0.25" />
 
     <TextView
         android:id="@+id/registered_emailid_hint"
